--- a/templates/task/index.html.twig
+++ b/templates/task/index.html.twig
@@ -3,18 +3,24 @@
 {% block title %}Hello TaskController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/École/Dev web/DEV/Symfony/test/src/Controller/TaskController.php'|file_link(0) }}">src/Controller/TaskController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/École/Dev web/DEV/Symfony/test/templates/task/index.html.twig'|file_link(0) }}">templates/task/index.html.twig</a></code></li>
-    </ul>
+<div class="container">
+    <table class="table table-striped table-bordered" id="tasksTable">
+        <thead>
+            <th>Id</th>
+            <th>Nom</th>
+            <th>Date Effective</th>
+        <thead>
+        <tbody>
+        {% if tasks is difined %}
+            {% for task in tasks %}
+                <tr>
+                    <th scope="row">{{ task.id }}</th>
+                    <td>{{ task.name }}</td>
+                    <td>{{ task.dueAt | date('d/m/Y H:i' }}</td>
+                </tr>
+            {% endfor %}
+        {% endif %}
+        </tbody>
+    </table>
 </div>
 {% endblock %}
